# django-stacktrace

./: .gitignore  README.md  pyproject.toml  runtests.py
.github/workflows/: workflow.yml
playground/: README.md  pyproject.toml
playground/config/: settings.py  urls.py
playground/crashlog/: apps.py  urls.py  views.py
playground/example/: urls.py  views.py
src/django_crashlog/: __init__.py  admin.py  apps.py  middleware.py  settings.py  signals.py
src/django_crashlog/event_builder/: builder.py  contexts.py  exception.py  request.py
src/django_crashlog/event_store/: __init__.py  model_data.py  sampling.py  store.py
src/django_crashlog/migrations/: 0001_initial.py  0002_rename_django_cra_created_f746c1_idx_django_cras_created_1ce45b_idx_and_more.py  0003_crashevent_culprit_crashevent_server_name.py  0004_rename_payload_crashevent_context.py  0005_alter_crashevent_options_and_more.py
src/django_crashlog/templates/admin/django_crashlog/crashevent/: change_list.html
src/django_crashlog/tests/: README.md  settings.py  test_event_builder.py  test_event_store.py
src/django_stacktrace/: settings.py
src/django_stacktrace/event_builder/: builder.py
src/django_stacktrace/event_store/: sampling.py  store.py
