[project]
name = "playground"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.1",
    "django-crashlog",
    "requests>=2.32.5",
]

[tool.uv.sources]
django-crashlog = { workspace = true, editable = true }
